Corrected fonts on the nav bar and the alignment.

--- a/Sunnyside.css
+++ b/Sunnyside.css
@@ -3,8 +3,12 @@
 	font-size: 18px;
 }
 
-nav a, h1, h2, h3 {
+a, h1, h2, h3, button {
 	font-family: "Fraunces";
+}
+
+a {
+	text-decoration: none;
 }
 
 /* nav */
@@ -13,29 +17,35 @@ nav {
 	justify-content: space-between;
 	padding: 20px;
 	align-items: baseline;
+	margin: 2vw 2vw;
+}
+
+nav a, button {
+	font-size: 16px;
+}
+
+nav a {
+	font-family: Barlow;
+	margin-right: 3vw;
 }
 
 h3 {
 	font-family: "Barlow", sans-serif;
 	margin: 0;
+	font-size: 30px;
+	font-weight: bold;
 }
 
 h3, nav div a, h1 {
 	color: hsl(0, 0%, 100%);
 }
 
-a {
-	text-decoration: none;
-}
-
-nav div a, nav div button{
-	margin: 0px 10px;
-}
-
 button {
 	background-color:  hsl(0, 0%, 100%);
-	border-radius: 20px;
-	padding: 8px 16px;
+	border-radius: 40px;
+	padding: 20px 25px;
+	border: none;
+	
 }
 
 /* Header */
@@ -70,22 +80,28 @@ body {
 .grid div {
 	display: flex;
 	flex-direction: column;
-	padding: 10% 5% 10% 10%;
 	color: hsl(212, 27%, 19%);
+}
+
+.brand-text {
+	padding: 10% 5% 10% 10%;
+}
+
+.audience-text {
+	padding: 10% 10% 10% 5%;
 }
 
 .grid div p {
 	font-family: "Barlow", sans-serif;
-	font-weight: bold;
 	color: hsl(232, 10%, 55%);
 }
 
 .grid a {
 	color: hsl(212, 27%, 19%);
-	font-weight: bold;
+	font-weight: 900;
 }
 
 h2 {
 	font-size: 40px;
-	font-weight: bold;
+	font-weight: 900;
 }
